# impala

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  ruff.yml
data/: references.bib
data/ti-6al-4v/Python_StrainOffset/: StrainClip.ipynb  Strain_Offset.ipynb
examples/: cu_config.yaml  ex_bayarri_discrepancy.ipynb  ex_friedman.ipynb  ex_shpb_clustering.ipynb  ex_shpb_hierarchical.ipynb  ex_shpb_pooled.ipynb  material_strength.ipynb  maximum_a_posteriori_estimation.ipynb  multi_calib.py  shpb-flyer-Al5083_pooled.py  shpb_pooled.py  ti64_analysis.py  ti64_data_prep.py
impala/: __init__.py  impala_clust.py  impala_noProbit_emu.py  models_withLik.py  pbar.py  physical_models_vec.py  plots.py  post_process.py
src/impala/: __init__.py
src/impala/physics/: __init__.py  physical_models_functions.py  physical_models_vec.py
src/impala/superCal/: __init__.py  impala_clust.py  impala_noProbit_emu.py  impala_noprobit_emu.py  map.py  models_withLik.py  models_withlik.py  pbar.py  plots.py  post_process.py
tests/: test_friedman_fit.py  test_physical_models_vec.py  test_physmod_PTW.py  test_physmod_constyield.py  test_physmod_init.py  test_physmod_yjc.py
tests/data/: physics_strainstress_baseline.csv  physics_strainstress_baseline_1.csv  physics_strainstress_baseline_2.csv  physics_strainstress_baseline_3.csv  physics_strainstress_baseline_4.csv
